Fri Oct 15 17:46:29 2004  Steve Huston  <shuston@riverace.com>

	* configure.ac: Added checks for the swab() variants that have:
	  (const char*, char*, ssize_t) [SVID3 - ACE_HAS_CONST_CHAR_SWAB]
	  and (char*, char*, ssize_t) [Windows, et al - ACE_HAS_NONCONST_SWAB].
	  Also altered the ACE_HAS_TYPENAME test to work on Forte C++ 7.

	* m4/config_h.m4: Added ACE_HAS_CONST_CHAR_SWAB and
	  ACE_HAS_NONCONST_SWAB.

	* ace/OS_NS_unistd.inl (swab): Added code for ACE_HAS_CONST_CHAR_SWAB
	  variant for swab() found on Solaris.

	* ace/config-sunos5.5.h: Replace ACE_LACKS_SWAB with
	  ACE_HAS_CONST_CHAR_SWAB. This was determined by running the autoconf
	  tests. If it doesn't work uniformly, will need some feature-test
	  tweaks.

Fri Oct 15 17:33:18 2004  Steve Huston  <shuston@riverace.com>

	* ace/ACE.h:
	* ace/OS_NS_signal.h: Include config-lite.h instead of config-all.h.
	  It drags in too much and some trips up the aC++ compiler. Not sure
	  why... it's a tangled web.

	* ace/Message_Block.h: Add #include "ace/config-lite.h" since it needs
	  to know config settings.

Fri Oct 15 16:44:29 2004  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_stdlib.cpp (mkstemp_emulation): Related to:
	  Fri Oct  8 23:13:13 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
	  Only figure out a configurable limit on non-WinCE platforms. WinCE
	  lacks too much to get fancy, so just use 127.

	* ace/Ping_Socket.cpp: Added Win32 /**/ trickery to keep MSVC from
	  complaining about missing header files.

	* ace/OS_main.{h cpp}: Use ACE_HAS_WINCE, not ACE_WINCE, as the
	  config macro to decide on Windows CE stuff.
	  Also, the WinCE version of ACE_Main_Base::run() takes the WinCE
	  command line args, not argc/argv. The argc/argv conversion from
	  the text command line is now in the .cpp file, removing the need
	  for including ARGV.h in OS_main.h, the source of many header file
	  loops.

Fri Oct 15 13:28:02 2004  Dale Wilson  <wilson_d@ociweb.com>
